--- a/portfolio/projects/internet.html
+++ b/portfolio/projects/internet.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-
         <title>Huarui Lai</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
         <link rel="icon" type="image/png" href="../assets/h-icon.png" />
+        <link rel="stylesheet" href="https://unpkg.com/knopf.css/knopf.min.css">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/projects.css">
         <script defer src="js/app.js"></script>
@@ -200,18 +200,20 @@ thoughts/concerns/comments
         <div class="footer">
             <div class="container">
                 <div class="contact center">
-                    <a href = "gaugeme.html">
-                        <div class="button left">
-                            <img class="arrow" alt="left arrow" src="../assets/left.png" />
-                            <div class="bold">prev</div>
-                        </div>   
-                    </a>
-                    <a href = "infosystems.html">   
-                        <div class="button right">
-                            <div class="bold">next</div>
-                            <img class="arrow" alt="right arrow" src="../assets/right.png" />
-                        </div>   
-                    </a>
+                    <div class="contact center">
+                        <a href = "gaugeme.html" class="spacing">  
+                            <button class="knopf inverse outlined wide pill">
+                                <img class="arrow cla" alt="left arrow" src="../assets/left.png" />
+                                <div class="bold">prev</div>
+                            </button>
+                        </a>
+                        <a href = "infosystems.html" class="spacing">   
+                            <button class="knopf inverse outlined wide pill">
+                                <div class="bold">next</div>
+                                <img class="arrow" alt="right arrow" src="../assets/right.png" />
+                            </button>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
