--- a/portfolio/projects/gaugeme.html
+++ b/portfolio/projects/gaugeme.html
@@ -6,6 +6,7 @@
         <title>Huarui Lai</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
         <link rel="icon" type="image/png" href="../assets/h-icon.png" />
+        <link rel="stylesheet" href="https://unpkg.com/knopf.css/knopf.min.css">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/projects.css">
         <script defer src="js/app.js"></script>
@@ -147,17 +148,17 @@
         <div class="footer">
             <div class="container">
                 <div class="contact center">
-                    <a href = "pamela.html">
-                        <div class="button left">
-                            <img class="arrow" alt="left arrow" src="../assets/left.png" />
+                    <a href = "pamela.html" class="spacing">  
+                        <button class="knopf inverse outlined wide pill">
+                            <img class="arrow cla" alt="left arrow" src="../assets/left.png" />
                             <div class="bold">prev</div>
-                        </div>   
+                        </button>
                     </a>
-                    <a href = "internet.html">   
-                        <div class="button right">
+                    <a href = "internet.html" class="spacing">   
+                        <button class="knopf inverse outlined wide pill">
                             <div class="bold">next</div>
                             <img class="arrow" alt="right arrow" src="../assets/right.png" />
-                        </div>   
+                        </button>
                     </a>
                 </div>
             </div>
